# subcriber-mail

./: Cargo.toml  general.yml
.github/workflows/: general.yml
migrations/: 20210613171710_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
