[package]
name = "subcriber-mail"
version = "0.1.0"
authors = ["Zachary Wang <wangrenquan@hortorgames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = "*"
actix-rt = "*"
tokio = { version = "*", features= ["full"]}

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subcriber-mail"
