[package]
name = "subcriber-mail"
version = "0.1.0"
authors = ["Zachary Wang <wangrenquan@hortorgames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
actix-rt = "2"
serde = { version = "~1.0.126", features = ["derive"] }
sqlx = { version = "0.5.5", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.11.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subcriber-mail"

[dev-dependencies]
reqwest = "*"
